--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %} {% block title %} Home Page {% endblock %}
 {% block content %}
-<p>home page???????</p>
+<h1 class="text-2xl">home page???????</h1>
 {% endblock %}
