--- a/frontend_service/frontend_service_app/templates/homepage.html
+++ b/frontend_service/frontend_service_app/templates/homepage.html
@@ -60,7 +60,7 @@
         </div>
         
         <div class="flex flex-row justify-between space-x-4 mt-4 w-full">
-            {% for recipe in recipes|slice:":3" %}
+            {% for recipe in recipes|slice:"1:4" %}
                 <div class="flex flex-col min-h-[45vh] w-1/3 bg-white">
                     <div 
                         class="w-4/5 h-2/5 bg-pink-700 mx-auto mt-6"
