--- a/frontend_service/frontend_service_app/templates/navbar.html
+++ b/frontend_service/frontend_service_app/templates/navbar.html
@@ -1,5 +1,5 @@
 
-<div class="flex border h-14 sticky top-0 bg-white z-10">
+<div class="flex border h-14 sticky top-0 bg-white z-10 text-stone-700">
     <nav class="flex flex-row justify-between w-3/5 m-auto font-navBar text-lg">
         <div>
             <ul class="flex flex-row space-x-4">
