--- a/frontend_service/frontend_service_app/templates/category.html
+++ b/frontend_service/frontend_service_app/templates/category.html
@@ -8,53 +8,42 @@
     <title>Document</title>
     {% tailwind_css %}
 </head>
-<body class="flex flex-col bg-slate-900 min-h-screen relative">
+<body class="flex flex-col bg-slate-900 min-h-screen">
     {% include "navbar.html" %}
-    <div class="grid grid-cols-4 mx-auto w-3/5 mt-4 flex-grow text-stone-700 gap-4">
-        {% for recipe in recipes %}
-            <a href="{% url 'recipe-detail' recipe.id %}" class="block cursor-pointer">
-                <div class="flex flex-col h-[30vh] bg-white">
-                    <!-- Image Section -->
-                    <div class="w-5/6 h-3/4  max-h-[18vh] mx-auto mt-5">
+    <div class="flex-grow">
+        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 mx-auto w-3/5 mt-4 text-stone-700 gap-2">
+
+            {% for recipe in recipes %}
+            <a href="{% url 'recipe-detail' recipe.id %}" class="block cursor-pointer h-full">
+                <div class="flex flex-col bg-white h-full">
+                    <div class="w-full flex-1 mx-auto">
                         <img src="{{ recipe.imageurl }}" alt="{{ recipe.name }}" class="object-cover w-full h-full">
                     </div>
-                    
-                    <!-- Recipe Details -->
-                    <div class="flex flex-col mx-auto mt-3 mb-3 gap-3 text-center px-4">
-                        <!-- <p class="text-red-600 font-navBar text-sm">{{ recipe.category.name }}</p> -->
-                        <p class="text-2xl font-recipeTitle tracking-wide hover:text-red-600">{{ recipe.title }}</p>
-                        <!-- <p class="text-gray-600">{{ recipe.description }}</p> -->
                         
-                        <div class="flex flex-row mx-auto gap-3">
-                            <!-- Time -->
-                            <div class="flex flex-row gap-1 items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 stroke-red-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                                </svg>                              
-                                <p>{{ recipe.time }} min</p> 
-                            </div>
+                        <div class="flex flex-col mx-auto mt-3 mb-3 gap-3 text-center px-4">
+                            <p class="text-xl font-recipeTitle tracking-wide hover:text-red-600">{{ recipe.title }}</p>
+                
+                            <div class="flex flex-row mx-auto gap-3">
+                                <div class="flex flex-row gap-1 items-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 stroke-red-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                                    </svg>                              
+                                    <p>{{ recipe.time }} min</p> 
+                                </div>
+                                
+                                <div class="flex flex-row gap-1 items-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 stroke-red-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
+                                    </svg>                             
+                                    <p>{{ recipe.cost }} sek</p>
+                                </div>
                             
-                            <!-- Cost -->
-                            <div class="flex flex-row gap-1 items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 stroke-red-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
-                                </svg>                             
-                                <p>{{ recipe.cost }} sek</p>
                             </div>
-                            
-                            <!-- Calories -->
-                            <!-- <div class="flex flex-row gap-1 items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 stroke-red-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.047 8.287 8.287 0 0 0 9 9.601a8.983 8.983 0 0 1 3.361-6.867 8.21 8.21 0 0 0 3 2.48Z" />
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 18a3.75 3.75 0 0 0 .495-7.468 5.99 5.99 0 0 0-1.925 3.547 5.975 5.975 0 0 1-2.133-1.001A3.75 3.75 0 0 0 12 18Z" />
-                                </svg>                              
-                                <p>{{ recipe.kcal }} kcal</p>
-                            </div> -->
                         </div>
                     </div>
-                </div>
-            </a>
-        {% endfor %}
+                </a>
+            {% endfor %}
+        </div>
     </div>
     
     {% include "footer.html" %}
