--- a/frontend_service/frontend_service_app/templates/navbar.html
+++ b/frontend_service/frontend_service_app/templates/navbar.html
@@ -1,37 +1,74 @@
+{% load static %}
+
+<script src="{% static 'js/toggleDropdown.js' %}"></script>
 
 <div class="flex border h-14 sticky top-0 bg-white z-10 text-stone-700">
     <nav class="flex flex-row justify-between w-3/5 m-auto font-navBar text-lg">
         <div>
-            <ul class="flex flex-row space-x-4">
-                <a href="{% url 'category' 'baking' %}" class="block cursor-pointer">
+            <ul class="flex flex-row space-x-4 ">
+                <a href="{% url 'homepage' %}" class="block cursor-pointer hover:text-red-600 font-semibold">
+                    <li>Home</li>
+                </a>
+                <a href="{% url 'category' 'baking' %}" class="block cursor-pointer hover:text-red-600">
                     <li>Baking</li>
                 </a>
-                <a href="{% url 'category' 'soup & stews' %}" class="block cursor-pointer">
+                <a href="{% url 'category' 'soup & stews' %}" class="block cursor-pointer hover:text-red-600">
                     <li>Soup & Stews</li>
                 </a>
-                <a href="{% url 'category' 'pasta' %}" class="block cursor-pointer">
+                <a href="{% url 'category' 'pasta' %}" class="block cursor-pointer hover:text-red-600">
                     <li>Pasta</li>
                 </a>
-                <a href="{% url 'category' 'protein & sides' %}" class="block cursor-pointer">
+                <a href="{% url 'category' 'protein & sides' %}" class="block cursor-pointer hover:text-red-600">
                     <li>Protein & Sides</li>
                 </a>
-                <a href="{% url 'category' 'asian' %}" class="block cursor-pointer">
+                <a href="{% url 'category' 'asian' %}" class="block cursor-pointer hover:text-red-600">
                     <li>Asian</li>
                 </a>
-                <a href="{% url 'category' 'vegitarian' %}" class="block cursor-pointer">
+                <a href="{% url 'category' 'vegitarian' %}" class="block cursor-pointer hover:text-red-600">
                     <li>Vegitarian</li>
                 </a>
-                
-                
-                
-                
-                
             </ul>
         </div>
         <div>
             <ul class="flex flex-row space-x-4">
-                <li>P-login</li>
-                <li>P-create</li>
+                {% if request.session.username %}
+                    <div>
+                        <button class=" text-white bg-green-500 rounded-xl w-[12vh] hover:shadow-lg">
+                            Create
+                        </button>
+                    </div>
+                    <div>
+                        <button 
+                            id="dropdownButton"
+                            class="hover:text-red-600">
+                            {{ request.session.username }}
+                        </button>
+                        <div id="dropdownMenu" class="hidden absolute border-t-[0.1vh] border-stone-300 bg-white mt-3 w-[20vh]">
+                            <a href="{% url 'logout' %}?next={{ request.path }}">
+                                <p class="w-full h-full border-0 hover:text-red-600">Logout</p>
+                            </a>
+                            <!-- Userpage not implimented yet -->
+                            <p class="hover:text-red-600">Userpage</p> 
+                        </div>
+                        
+                    </div>
+                {% else %}
+                <div class="relative inline-block text-left">
+                    <button 
+                        id="dropdownButton"
+                        class="hover:text-red-600">
+                        Login
+                    </button>
+                    <div id="dropdownMenu" class="hidden absolute border-t-[0.1vh] border-stone-300 bg-white mt-3 w-[20vh]">
+                        <form action="{% url 'login' %}?next={{ request.path }}" method="post" class="">
+                            {% csrf_token %}
+                            <input id="username" type="text" placeholder="Username" name="username" class="w-full h-full border-0">
+                            <input id="password" type="password" placeholder="Password" name="password" class="w-full h-full border-0">
+                            <input type="submit" value="Submit" class="w-full h-full border-t-[0.1vh] border-stone-300 hover:text-red-600">
+                        </form>
+                    </div>
+                </div>
+                {% endif %}
             </ul>
         </div>
     </nav>
