--- a/frontend_service/frontend_service_app/templates/homepage.html
+++ b/frontend_service/frontend_service_app/templates/homepage.html
@@ -5,8 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Mother of all omeletts</title>
     {% tailwind_css %}
+    <link rel="icon" type="image/x-icon" href="{% static 'images/chef_armstrong.ico' %}">
 </head>
 <body class="flex flex-col bg-slate-900 min-h-screen relative">
     
