--- a/frontend_service/frontend_service_app/templates/navbar.html
+++ b/frontend_service/frontend_service_app/templates/navbar.html
@@ -33,9 +33,11 @@
             <ul class="flex flex-row space-x-4">
                 {% if request.session.username %}
                     <div>
-                        <button class=" text-white bg-green-500 rounded-xl w-[12vh] hover:shadow-lg">
-                            Create
-                        </button>
+                        <a href="{% url 'create-recipe' %}">
+                            <button class=" text-white bg-green-500 rounded-xl w-[12vh] hover:shadow-lg">
+                                Create
+                            </button>
+                        </a>
                     </div>
                     <div>
                         <button 
