--- a/frontend_service/frontend_service_app/templates/recipe.html
+++ b/frontend_service/frontend_service_app/templates/recipe.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <title>Mother of all omeletts</title>
     {% tailwind_css %}
+    <link rel="icon" type="image/x-icon" href="{% static 'images/chef_armstrong.ico' %}">
 </head>
 
 <script src="{% static 'js/portionScaler.js' %}"></script>
