--- a/frontend_service/frontend_service_app/templates/navbar.html
+++ b/frontend_service/frontend_service_app/templates/navbar.html
@@ -33,7 +33,7 @@
             <ul class="flex flex-row space-x-4">
                 {% if request.session.username %}
                     <div>
-                        <a href="{% url 'create-recipe' %}">
+                        <a href="{% url 'create_recipe' %}">
                             <button class=" text-white bg-green-500 rounded-xl w-[12vh] hover:shadow-lg">
                                 Create
                             </button>
