--- a/frontend_service/frontend_service_app/templates/navbar.html
+++ b/frontend_service/frontend_service_app/templates/navbar.html
@@ -49,8 +49,9 @@
                             <a href="{% url 'logout' %}?next={{ request.path }}">
                                 <p class="w-full h-full border-0 hover:text-red-600">Logout</p>
                             </a>
-                            <!-- Userpage not implimented yet -->
-                            <p class="hover:text-red-600">Userpage</p> 
+                            <a href="{% url 'user_information' %}?next={{ request.path }}">
+                                <p class="hover:text-red-600">Userpage</p> 
+                            </a>
                         </div>
                         
                     </div>
