--- a/frontend_service/frontend_service_app/templates/category.html
+++ b/frontend_service/frontend_service_app/templates/category.html
@@ -16,35 +16,36 @@
         <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 mx-auto w-3/5 mt-4 text-stone-700 gap-2">
 
             {% for recipe in recipes %}
-            <a href="{% url 'recipe-detail' recipe.id %}" class="block cursor-pointer h-full">
-                <div class="flex flex-col bg-white h-full">
-                    <div class="w-full flex-1 mx-auto">
-                        <img src="{{ recipe.imageurl }}" alt="{{ recipe.name }}" class="object-cover w-full h-full">
-                    </div>
-                        
-                        <div class="flex flex-col mx-auto mt-3 mb-3 gap-3 text-center px-4">
-                            <p class="text-xl font-recipeTitle tracking-wide hover:text-red-600">{{ recipe.title }}</p>
-                
-                            <div class="flex flex-row mx-auto gap-3">
-                                <div class="flex flex-row gap-1 items-center">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 stroke-red-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                                    </svg>                              
-                                    <p>{{ recipe.time }} min</p> 
+                {% if recipe.id %}
+                    <a href="{% url 'recipe-detail' recipe.id %}" class="block cursor-pointer h-full">
+                        <div class="flex flex-col bg-white h-full">
+                            <div class="w-full flex-1 mx-auto">
+                                <img src="{{ recipe.imageurl }}" alt="{{ recipe.name }}" class="object-cover w-full h-full">
+                            </div>
+                            <div class="flex flex-col mx-auto mt-3 mb-3 gap-3 text-center px-4">
+                                <p class="text-xl font-recipeTitle tracking-wide hover:text-red-600">{{ recipe.title }}</p>
+                                <div class="flex flex-row mx-auto gap-3">
+                                    <div class="flex flex-row gap-1 items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 stroke-red-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                                        </svg>
+                                        <p>{{ recipe.time }} min</p> 
+                                    </div>
+                                    <div class="flex flex-row gap-1 items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 stroke-red-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
+                                        </svg>                             
+                                        <p>{{ recipe.cost }} sek</p>
+                                    </div>
                                 </div>
-                                
-                                <div class="flex flex-row gap-1 items-center">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 stroke-red-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
-                                    </svg>                             
-                                    <p>{{ recipe.cost }} sek</p>
-                                </div>
-                            
                             </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                {% else %}
+                    <p class="text-red-500">Invalid recipe: Missing ID</p>
+                {% endif %}
             {% endfor %}
+
         </div>
     </div>
     
