added register button

--- a/frontend_service/frontend_service_app/templates/navbar.html
+++ b/frontend_service/frontend_service_app/templates/navbar.html
@@ -71,6 +71,10 @@
                         </form>
                     </div>
                 </div>
+                    {% if not request.session.username %}
+                        <a href="{% url 'register' %}">
+                            <button class="hover:text-red-600">Register</button>
+                    {% endif %}
                 {% endif %}
             </ul>
         </div>
