--- a/frontend_service/frontend_service_app/templates/verify_2fa.html
+++ b/frontend_service/frontend_service_app/templates/verify_2fa.html
@@ -11,12 +11,12 @@
         <input type="text" name="user_code_2fa" id="2fa_code" required>
         <button type="submit">Verify</button>
     </form>
-    {% if messages %}
+    <!-- {% if messages %}
         <ul>
             {% for message in messages %}
                 <li>{{ message }}</li>
             {% endfor %}
         </ul>
-    {% endif %}
+    {% endif %} -->
 </body>
 </html>
