--- a/frontend_service/frontend_service_app/templates/register.html
+++ b/frontend_service/frontend_service_app/templates/register.html
@@ -6,13 +6,13 @@
 <body>
     <h1>Register</h1>
 
-    {% if messages %}
+    <!-- {% if messages %}
         <ul>
             {% for message in messages %}
                 <li>{{ message }}</li>
             {% endfor %}
         </ul>
-    {% endif %}
+    {% endif %} -->
 
     <form method="post">
         {% csrf_token %}
